[dependencies]
chrono = '0.4.6'
crossbeam-channel = '0.3.6'
endian_trait = '0.6.0'
num-complex = '0.2.1'
num-traits = '0.2.6'
#pcap = '0.7.0'
rayon = '1.0.3'
udt = '0.2.0'

[dependencies.pnet]
version= '0.21.0'
#features=["netmap"]
features=["pcap"]

[dependencies.astroalgo]
path = '../astroalgo'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
name = 'bfcorr'
version = '0.1.0'
